--- a/requirements.yml
+++ b/requirements.yml
@@ -9,6 +9,7 @@ roles:
   - src: cloudalchemy.node_exporter
   - src: cloudalchemy.prometheus
   - src: cloudalchemy.grafana
+  - src: stefangweichinger.ansible_rclone
 
 collections:
   - name: community.general
