--- a/setup.yaml
+++ b/setup.yaml
@@ -163,6 +163,8 @@
         - https://packages.riot.im/debian/riot-im-archive-keyring.gpg
         - https://packagecloud.io/golang-migrate/migrate/gpgkey
         - https://dl.winehq.org/wine-builds/winehq.key
+        - https://repo.jotta.us/public.gpg
+        - https://apt.releases.hashicorp.com/gpg
 
     - name: Add apt repositories into sources list
       become: yes
@@ -178,11 +180,14 @@
         - ppa:git-core/ppa ## This is broken for hirsute
         - ppa:yubico/stable
         - deb [arch=amd64] https://packages.riot.im/debian/ default main
-        - "deb https://packagecloud.io/golang-migrate/migrate/ubuntu/ focal main"
+        - deb https://packagecloud.io/golang-migrate/migrate/ubuntu/ focal main
         - deb https://dl.winehq.org/wine-builds/ubuntu/ {{ ansible_distribution_release }} main
         - ppa:graphics-drivers/ppa
         - ppa:damentz/liquorix
         - ppa:kisak/kisak-mesa
+        - deb https://repo.jotta.us/debian debian main
+        - deb [arch=amd64] https://apt.releases.hashicorp.com focal main
+        - ppa:apt-fast/stable
 
     - name: Add NodeSource stuff
 #      warn: false # why doesn't this work?
@@ -305,6 +310,16 @@
           - ocl-icd-opencl-dev
           - fakeroot
           - inxi
+          - jotta-cli
+          - vulkan-tools
+          - nomad
+          - apt-fast
+          - automake
+          - autotools-dev
+          - libiberty-dev
+          - libpci-dev
+          - libssl-dev
+          - libudev-dev
 
     - name: Install snaps
       become: yes
@@ -337,6 +352,7 @@
         name:
           - skype
           - slack
+          - flutter
 
     - name: install python packages
       become: yes
@@ -348,6 +364,7 @@
           - jmespath
           - passlib[bcrypt]
           - protonup
+          - qmk
 
 ### Docker setup
     - name: Updating user {{ ansible_env.USER }} to docker group and zsh
