--- a/setup.yaml
+++ b/setup.yaml
@@ -1,4 +1,4 @@
-- hosts: localhost
+- hosts: all
   vars:
     multimc_url: https://files.multimc.org/downloads/
     multimc_file: multimc_1.5-1.deb
@@ -38,6 +38,8 @@
         value: 65535
 
   roles:
+    - role: globalprotect
+      become: true
     - role: patrick-hill.franz
       vars:
         franz_version: 5.6.1
@@ -47,6 +49,39 @@
       become: yes
     - role: stefangweichinger.ansible_rclone
       become: yes
+    - role: ansible-nsq
+      become: yes
+    - role: geerlingguy.postgresql
+      become: yes
+      vars:
+        postgresql_global_config_options:
+          - option: listen_addresses
+            value: "*"
+        postgresql_hba_entries:
+          - { type: local, database: all, user: postgres, auth_method: peer }
+          - { type: local, database: all, user: all, auth_method: peer }
+          - { type: host, database: all, user: all, address: '0.0.0.0/0', auth_method: md5 }
+          - { type: host, database: all, user: all, address: '::0/0', auth_method: md5 }
+        postgresql_users:
+          - name: wonko
+            password: "{{ psql_wonko_password }}"
+            role_attr_flags: SUPERUSER
+          - name: chremoas_dev
+            password: "{{ psql_chremoas_dev_password }}"
+        postgresql_databases:
+          - name: wonko
+            owner: wonko
+          - name: chremoas_dev
+            owner: chremoas_dev
+    - role: ansible-consul
+      become: yes
+      vars:
+        consul_version: 1.10.2
+        consul_datacenter: linode
+        consul_client_address: 0.0.0.0
+        consul_install_upgrade: true
+        consul_node_role: bootstrap
+
 #    - role: cloudalchemy.node_exporter
 #      become: yes
 #      vars:
@@ -320,6 +355,7 @@
           - libpci-dev
           - libssl-dev
           - libudev-dev
+          - debhelper
 
     - name: Install snaps
       become: yes
