--- a/requirements.yml
+++ b/requirements.yml
@@ -23,4 +23,5 @@ roles:
 collections:
   - name: community.general
   - name: community.crypto
+  - name: community.rabbitmq
   - name: ansible.posix
