--- a/setup.yaml
+++ b/setup.yaml
@@ -48,30 +48,31 @@
       become: yes
     - role: oefenweb.dropbox
       become: yes
-    - role: stefangweichinger.ansible_rclone
-      become: yes
-    - role: geerlingguy.postgresql
-      become: yes
-      vars:
-        postgresql_global_config_options:
-          - option: listen_addresses
-            value: "*"
-        postgresql_hba_entries:
-          - { type: local, database: all, user: postgres, auth_method: peer }
-          - { type: local, database: all, user: all, auth_method: peer }
-          - { type: host, database: all, user: all, address: '0.0.0.0/0', auth_method: md5 }
-          - { type: host, database: all, user: all, address: '::0/0', auth_method: md5 }
-        postgresql_users:
-          - name: wonko
-            password: "{{ psql_wonko_password }}"
-            role_attr_flags: SUPERUSER
-          - name: chremoas_dev
-            password: "{{ psql_chremoas_dev_password }}"
-        postgresql_databases:
-          - name: wonko
-            owner: wonko
-          - name: chremoas_dev
-            owner: chremoas_dev
+# This has stopped working.
+#    - role: stefangweichinger.ansible_rclone
+#      become: yes
+#    - role: geerlingguy.postgresql
+#      become: yes
+#      vars:
+#        postgresql_global_config_options:
+#          - option: listen_addresses
+#            value: "*"
+#        postgresql_hba_entries:
+#          - { type: local, database: all, user: postgres, auth_method: peer }
+#          - { type: local, database: all, user: all, auth_method: peer }
+#          - { type: host, database: all, user: all, address: '0.0.0.0/0', auth_method: md5 }
+#          - { type: host, database: all, user: all, address: '::0/0', auth_method: md5 }
+#        postgresql_users:
+#          - name: wonko
+#            password: "{{ psql_wonko_password }}"
+#            role_attr_flags: SUPERUSER
+#          - name: chremoas_dev
+#            password: "{{ psql_chremoas_dev_password }}"
+#        postgresql_databases:
+#          - name: wonko
+#            owner: wonko
+#          - name: chremoas_dev
+#            owner: chremoas_dev
     - role: ansible-consul
       become: yes
       vars:
@@ -227,7 +228,7 @@
         - ppa:graphics-drivers/ppa
         - ppa:kisak/kisak-mesa
         - deb https://repo.jotta.us/debian debian main
-        - deb [arch=amd64] https://apt.releases.hashicorp.com focal main
+        - deb [arch=amd64] https://apt.releases.hashicorp.com impish main
         - deb http://ppa.launchpad.net/rabbitmq/rabbitmq-erlang/ubuntu focal main
         - deb https://packagecloud.io/rabbitmq/rabbitmq-server/ubuntu/ focal main
         - deb https://aquasecurity.github.io/trivy-repo/deb focal main
@@ -334,7 +335,6 @@
           - python3-venv
           - pipx
           - crda
-          - mockgen
           - lm-sensors
           - fancontrol
           - pdftk
@@ -397,6 +397,8 @@
           - libnss-winbind
           - krb5-kdc
           - libpam-krb5
+          - clang
+          - htop
 #          - oracle-java17-installer
 
     - name: Install snaps
@@ -444,6 +446,7 @@
           - passlib[bcrypt]
           - protonup
           - qmk
+          - bpytop
 
 ### Docker setup
     - name: Updating user {{ ansible_env.USER }} to docker group and zsh
@@ -484,7 +487,7 @@
         line: managed=true
 
 ### Configure VyprVPN
-    - name: Task name
+    - name: Check if VyperVPN cert has been downloaded
       stat:
         path: /etc/openvpn/ca.vyprvpn.com.crt
       register: vyprvpn_cert
@@ -497,27 +500,27 @@
       when: not vyprvpn_cert.stat.exists
 
 ### Install MultiMC
-    - name: Check if multimc is installed
-      command: dpkg-query -W multimc
-      register: multimc_check_deb
-      failed_when: multimc_check_deb.rc > 1
-      changed_when: multimc_check_deb.rc == 1
-
-    - name: Download multimc
-      get_url:
-        url: "{{ multimc_url }}/{{ multimc_file }}"
-        dest: "/tmp/{{ multimc_file }}"
-      when: multimc_check_deb.rc == 1
-
-    - name: Install multimc
-      become: yes
-      apt: deb="/tmp/{{ multimc_file }}"
-      when: multimc_check_deb.rc == 1
-
-    - name: Remove multimc installer file
-      ansible.builtin.file:
-        path: "/tmp/{{ multimc_file }}"
-        state: absent
+#    - name: Check if multimc is installed
+#      command: dpkg-query -W multimc
+#      register: multimc_check_deb
+#      failed_when: multimc_check_deb.rc > 1
+#      changed_when: multimc_check_deb.rc == 1
+#
+#    - name: Download multimc
+#      get_url:
+#        url: "{{ multimc_url }}/{{ multimc_file }}"
+#        dest: "/tmp/{{ multimc_file }}"
+#      when: multimc_check_deb.rc == 1
+#
+#    - name: Install multimc
+#      become: yes
+#      apt: deb="/tmp/{{ multimc_file }}"
+#      when: multimc_check_deb.rc == 1
+#
+#    - name: Remove multimc installer file
+#      ansible.builtin.file:
+#        path: "/tmp/{{ multimc_file }}"
+#        state: absent
 
 ### Install KO
     - name: Get KO
@@ -529,41 +532,43 @@
         mode: 0755
 
 ### Install LSD
-    - name: Check if LSD is installed
-      command: dpkg-query -W lsd
-      register: lsd_check_deb
-      failed_when: lsd_check_deb.rc > 1
-      changed_when: lsd_check_deb.rc == 1
-
-    - name: Download LSD github release json
-      uri:
-        url: https://api.github.com/repos/Peltoche/lsd/releases/latest
-        return_content: true
-      register: lsd_json_reponse
-
-    - name: Filter github reply for LSD
-      set_fact:
-        lsd_url: "{{ item }}"
-      with_items:
-        - "{{ lsd_json_reponse.json | community.general.json_query(json_filter) }}"
-      vars:
-        - json_filter: assets[?ends_with(name, 'amd64.deb') && !contains(name, 'musl')].browser_download_url
-
-    - name: Get LSD
-      get_url:
-        url: "{{ lsd_url }}"
-        dest: "/tmp/lsd.deb"
-      when: lsd_check_deb.rc == 1
-
-    - name: Install LSD
-      become: yes
-      apt: deb="/tmp/lsd.deb"
-      when: lsd_check_deb.rc == 1
-
-    - name: Remove LSD installer file
-      ansible.builtin.file:
-        path: "/tmp/lsd.deb"
-        state: absent
+#    - name: Check if LSD is installed
+#      command: dpkg-query -W lsd
+#      register: lsd_check_deb
+#      failed_when: lsd_check_deb.rc > 1
+#      changed_when: lsd_check_deb.rc == 1
+#
+#    - name: Download LSD github release json
+#      uri:
+#        url: https://api.github.com/repos/Peltoche/lsd/releases/latest
+#        return_content: true
+#      register: lsd_reponse
+#      when: lsd_check_deb.rc == 1
+#
+#    - name: Filter github reply for LSD
+#      set_fact:
+#        lsd_url: "{{ item }}"
+#      with_items:
+#        - "{{ lsd_reponse.json | community.general.json_query(json_filter) }}"
+#      vars:
+#        - json_filter: assets[?ends_with(name, 'amd64.deb') && !contains(name, 'musl')].browser_download_url
+#      when: lsd_check_deb.rc == 1
+#
+#    - name: Get LSD
+#      get_url:
+#        url: "{{ lsd_url }}"
+#        dest: "/tmp/lsd.deb"
+#      when: lsd_check_deb.rc == 1
+#
+#    - name: Install LSD
+#      become: yes
+#      apt: deb="/tmp/lsd.deb"
+#      when: lsd_check_deb.rc == 1
+#
+#    - name: Remove LSD installer file
+#      ansible.builtin.file:
+#        path: "/tmp/lsd.deb"
+#        state: absent
 
 ### Install ZSH dependencies
     - name: Install Antibody
